--- a/frontend/pong-app/projects/pong/src/app/update-profile-component/update-profile-component.component.html
+++ b/frontend/pong-app/projects/pong/src/app/update-profile-component/update-profile-component.component.html
@@ -6,13 +6,13 @@
         <input type="text" formControlName="tournament_name" class="form-control">
       </div>
       
-      <div class="form-group">
+      <!-- <div class="form-group">
         <label i18n>Email</label>
         <input type="email" formControlName="email" class="form-control">
         <div *ngIf="updateForm.get('email')?.errors?.['email']" class="error-message" i18n>
           Please enter a valid email address
         </div>
-      </div>
+      </div> -->
 
       <div class="form-group">
         <label i18n>Avatar</label>
