Añadida la pagina donde los 4 players deciden si jugar registrados o no antes de entrar a jugar, falta hacer que el juego pille bien cada usuario

--- a/frontend/pong-app/projects/pong/src/app/home/home.component.html
+++ b/frontend/pong-app/projects/pong/src/app/home/home.component.html
@@ -6,7 +6,7 @@
                     <button routerLink="/local-play" class="btn btn-custom" id="play-local-2">{{ 'home.2.players' | translate }}</button>
                 </div>
                 <div class="col-12 mb-3">
-                    <button routerLink="/multiplayer" class="btn btn-custom" id="play-local-4">{{ 'home.4.players' | translate }}</button>
+                    <button routerLink="/4page" class="btn btn-custom" id="play-local-4">{{ 'home.4.players' | translate }}</button>
                 </div>
                 <div class="col-12 mb-3">
                     <button routerLink="/tournament"class="btn btn-custom" id="play-tournament">{{ 'home.tournament' | translate }}</button>
