--- a/frontend/pong-app/projects/pong/src/app/match-history/match-history.component.html
+++ b/frontend/pong-app/projects/pong/src/app/match-history/match-history.component.html
@@ -1,22 +1,48 @@
 <div class="match-history">
-    <h3 i18n>Match History of {{currentUsername}} </h3>
-    <div class="matches-list">
+    <h2>Match History for {{ currentUsername }}</h2>
+    <div class="matches-container">
         <div *ngIf="matches.length === 0" class="empty-message" i18n>
             No matches played yet
         </div>
-        <div *ngFor="let match of matches" class="match-item">
+        <div *ngFor="let match of matches" class="match-card">
             <div class="match-header">
-                <span class="match-date">{{match.match_date | date:'medium'}}</span>
-                <span class="match-type" i18n>{{match.match_type}}</span>
+                <span class="match-date">{{ match.match_date | date:'medium' }}</span>
+                <span class="match-type">{{ match.match_type }}</span>
             </div>
-            <div class="match-details">
-                <span [class.winner]="match.winner_username === match.player1_username">
-                    {{match.player1_username}}
-                </span>
-                <span class="score">{{match.player1_score}} - {{match.player2_score}}</span>
-                <span [class.winner]="match.winner_username === match.player2_username">
-                  {{match.player2_username}}
-                </span>
+            
+            <div class="match-details" [ngClass]="{'multiplayer': match.match_type === 'multiplayer'}">
+                <!-- Regular 1v1 match -->
+                <ng-container *ngIf="match.match_type !== 'multiplayer'">
+                    <div class="player" [class.winner]="match.player1_name === match.winner_name">
+                        {{ match.player1_name }}: {{ match.player1_score }}
+                    </div>
+                    <div class="vs">vs</div>
+                    <div class="player" [class.winner]="match.player2_name === match.winner_name">
+                        {{ match.player2_name }}: {{ match.player2_score }}
+                    </div>
+                </ng-container>
+
+                <!-- 4-player match -->
+                <ng-container *ngIf="match.match_type === 'multiplayer'">
+                    <div class="multiplayer-grid">
+                        <div class="player" [class.winner]="match.player1_name === match.winner_name">
+                            {{ match.player1_name }}: {{ match.player1_score }}
+                        </div>
+                        <div class="player" [class.winner]="match.player2_name === match.winner_name">
+                            {{ match.player2_name }}: {{ match.player2_score }}
+                        </div>
+                        <div class="player" [class.winner]="match.player3_name === match.winner_name">
+                            {{ match.player3_name }}: {{ match.player3_score }}
+                        </div>
+                        <div class="player" [class.winner]="match.player4_name === match.winner_name">
+                            {{ match.player4_name }}: {{ match.player4_score }}
+                        </div>
+                    </div>
+                </ng-container>
+            </div>
+
+            <div class="match-footer">
+                Winner: {{ match.winner_name }}
             </div>
         </div>
     </div>
