--- a/frontend/pong-app/projects/pong/src/app/match-history/match-history.component.css
+++ b/frontend/pong-app/projects/pong/src/app/match-history/match-history.component.css
@@ -7,7 +7,8 @@
   flex-direction: column;
   gap: 15px;
   max-width: 800px;
-  margin: 0 auto;
+  margin: 0px auto;
+  padding-top: 30px;
 }
 
 .match-card {
@@ -45,6 +46,7 @@
   background: #333;
   border-radius: 4px;
   text-align: center;
+  color:white;
 }
 
 .vs {
