--- a/frontend/pong-app/projects/pong/src/app/match-history/match-history.component.html
+++ b/frontend/pong-app/projects/pong/src/app/match-history/match-history.component.html
@@ -13,36 +13,36 @@
             <div class="match-details" [ngClass]="{'multiplayer': match.match_type === 'multiplayer'}">
                 <!-- Regular 1v1 match -->
                 <ng-container *ngIf="match.match_type !== 'multiplayer'">
-                    <div class="player" [class.winner]="match.player1_name === match.winner_name">
-                        {{ match.player1_name }}: {{ match.player1_score }}
+                    <div class="player" [class.winner]="match.player1_username === match.winner_username">
+                        {{ match.player1_username }}: {{ match.player1_score }}
                     </div>
                     <div class="vs">vs</div>
-                    <div class="player" [class.winner]="match.player2_name === match.winner_name">
-                        {{ match.player2_name }}: {{ match.player2_score }}
+                    <div class="player" [class.winner]="match.player2_username === match.winner_username">
+                        {{ match.player2_username }}: {{ match.player2_score }}
                     </div>
                 </ng-container>
 
                 <!-- 4-player match -->
                 <ng-container *ngIf="match.match_type === 'multiplayer'">
                     <div class="multiplayer-grid">
-                        <div class="player" [class.winner]="match.player1_name === match.winner_name">
-                            {{ match.player1_name }}: {{ match.player1_score }}
+                        <div class="player" [class.winner]="match.player1_username === match.winner_username">
+                            {{ match.player1_username }}: {{ match.player1_score }}
                         </div>
-                        <div class="player" [class.winner]="match.player2_name === match.winner_name">
-                            {{ match.player2_name }}: {{ match.player2_score }}
+                        <div class="player" [class.winner]="match.player2_username === match.winner_username">
+                            {{ match.player2_username }}: {{ match.player2_score }}
                         </div>
-                        <div class="player" [class.winner]="match.player3_name === match.winner_name">
-                            {{ match.player3_name }}: {{ match.player3_score }}
+                        <div class="player" [class.winner]="match.player3_username === match.winner_username">
+                            {{ match.player3_username }}: {{ match.player3_score }}
                         </div>
-                        <div class="player" [class.winner]="match.player4_name === match.winner_name">
-                            {{ match.player4_name }}: {{ match.player4_score }}
+                        <div class="player" [class.winner]="match.player4_username === match.winner_username">
+                            {{ match.player4_username }}: {{ match.player4_score }}
                         </div>
                     </div>
                 </ng-container>
             </div>
 
             <div class="match-footer">
-                Winner: {{ match.winner_name }}
+                Winner: {{ match.winner_username }}
             </div>
         </div>
     </div>
