Changes for tournament matches not to start rapidly. Changed to start button

--- a/frontend/pong-app/projects/pong/src/app/2FA/2FA.component.html
+++ b/frontend/pong-app/projects/pong/src/app/2FA/2FA.component.html
@@ -12,6 +12,7 @@
       <!-- <div *ngIf="loginForm.get('username')?.touched && loginForm.get('username')?.invalid">
         <small class="text-danger">Invalid username</small>
       </div> -->
+      <small *ngIf="this.failed==true"  class="text-danger">{{ '2fa.failed' | translate }}</small>
     </div>
     <button class="submit-btn" type="submit">VERIFY</button>
   </form>
