--- a/backend/live_chat/templates/live_chat/chatPage.html
+++ b/backend/live_chat/templates/live_chat/chatPage.html
@@ -18,17 +18,17 @@
       const chatSocket = new WebSocket(
         'ws://' + window.location.host + '/ws/chat/' + roomName + '/'
       );
-      chatSocket.onopen = function (e) {
-        console.log("The connection was setup successfully !");
-      };
-      chatSocket.onclose = function (e) {
-        console.log("WebSocket closed with code: " + e.code);
-        console.log("Reason: " + e.reason);
-        console.log("Clean close: " + e.wasClean);
-      };
-      chatSocket.onerror = function (e) {
-        console.error('WebSocket Error:', e);
-      };
+      // chatSocket.onopen = function (e) {
+      //   console.log("The connection was setup successfully !");
+      // };
+      // chatSocket.onclose = function (e) {
+      //   console.log("WebSocket closed with code: " + e.code);
+      //   console.log("Reason: " + e.reason);
+      //   console.log("Clean close: " + e.wasClean);
+      // };
+      // chatSocket.onerror = function (e) {
+      //   console.error('WebSocket Error:', e);
+      // };
       document.querySelector("#id_message_send_input").focus();
       document.querySelector("#id_message_send_input").onkeyup = function (e) {
         if (e.keyCode == 13) {
