update profile eliminado el tournament name

--- a/frontend/pong-app/projects/pong/src/app/update-profile-component/update-profile-component.component.html
+++ b/frontend/pong-app/projects/pong/src/app/update-profile-component/update-profile-component.component.html
@@ -1,10 +1,10 @@
 <div class="update-profile-container">
     <h3 i18n>Update Profile</h3>
     <form [formGroup]="updateForm" (ngSubmit)="onSubmit()">
-      <div class="form-group">
+      <!-- <div class="form-group">
         <label i18n>Display Name</label>
         <input type="text" formControlName="tournament_name" class="form-control">
-      </div>
+      </div> -->
       
       <!-- <div class="form-group">
         <label i18n>Email</label>
